--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -106,3 +106,14 @@ a:hover {
     text-decoration: underline;
     color: #0056b3;
 }
+
+.success {
+    color: green;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.error {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
