--- a/src/main/webapp/css/realizarReserva.css
+++ b/src/main/webapp/css/realizarReserva.css
@@ -39,6 +39,16 @@ button:hover {
     background-color: #45a049;
 }
 
+/* Estilo del mensaje de confirmación */
+.confirmacion-mensaje {
+    text-align: center;
+    color: #4CAF50;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
 /* Estilos generales para enlaces con clase btn-secondary */
 a.btn-secondary {
     display: block; /* Ajustar el ancho automáticamente */
