--- a/src/main/webapp/css/buscarPistaDisponible.css
+++ b/src/main/webapp/css/buscarPistaDisponible.css
@@ -97,3 +97,13 @@ button[type="submit"]:hover {
     background-color: #0056b3;
     transform: scale(1.05);
 }
+
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
