--- a/src/main/webapp/css/buscarPistaDisponible.css
+++ b/src/main/webapp/css/buscarPistaDisponible.css
@@ -12,7 +12,7 @@ h1 {
     color: #444;
     text-align: center;
     font-size: 2em;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 /* Formulario */
@@ -105,5 +105,6 @@ button[type="submit"]:hover {
     padding: 10px;
     margin-bottom: 20px;
     border-radius: 5px;
+    display: none;
 }
 
